--- a/index.html
+++ b/index.html
@@ -1,230 +1,68 @@
-Youcef Djebbar, [4/20/2025 7:43 PM]
-<!-- فقط ضع هذا في ملف HTML واحفظه كـ index.html -->
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>استغفار لروح مصطفى بوشيخي</title>
-  <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to bottom, #fefcea, #f1da36);
-      font-family: 'Cairo', sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      color: #333;
-    }
+<script>
+  const azkar = [
+    "اللهم ارفع درجاته ",
+    "اللهم اغفر له ",
+    "اللهم اجعل قبره روضة من رياض الجنة",
+    "اللهم افسح له في قبره مد بصره",
+    "اللهم اجمعنا به في الفردوس الأعلى",
+    "اللهم أنر له قبره بنورك",
+    "اللهم اجعله من الذين لا خوف عليهم ولا هم يحزنون",
+    "اللهم بشره بروح وريحان ورب راضٍ غير غضبان",
+  ];
 
-    header {
-      background-color: #ffffffc2;
-      padding: 20px 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
+  // مصفوفة لتخزين قيم العدادات برمجياً
+  let countersData = [];
 
-    h1 {
-      margin: 0;
-      font-size: 28px;
-      color: #2c3e50;
-    }
+  function createZekrBox(text, index) {
+    const box = document.createElement("div");
+    box.className = "zekr-box";
 
-    .subheading {
-      font-size: 18px;
-      margin-top: 5px;
-      color: #555;
-    }
+    // نبدأ العداد من الصفر في المصفوفة
+    countersData[index] = 0;
 
-    .duaa {
-      background-color: #ffffffd0;
-      margin: 30px 20px;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #e0c93590;
-      font-family: 'Amiri', serif;
-      line-height: 1.8;
-      font-size: 20px;
-      color: #000;
-    }
+    const counterCircle = document.createElement("div");
+    counterCircle.className = "counter-circle";
+    counterCircle.id = "counter-" + index; // نعطي كل دائرة ID فريد
+    counterCircle.textContent = 0;
 
-    .zekr-box {
-      background: #ffffffcc;
-      margin: 15px 20px;
-      padding: 15px;
-      border-radius: 12px;
-      box-shadow: 0 0 8px #e0c93580;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
+    const zekrText = document.createElement("p");
+    zekrText.textContent = text;
 
-    .zekr-box:hover {
-      transform: scale(1.02);
-    }
+    box.appendChild(counterCircle);
+    box.appendChild(zekrText);
 
-    .counter-circle {
-      background-color: #fde3a7;
-      width: 70px;
-      height: 70px;
-      line-height: 70px;
-      margin: 0 auto 10px;
-      border-radius: 50%;
-      font-size: 20px;
-      font-weight: bold;
-    }
-
-    .reset-btn {
-      background-color: #c0392b;
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .reset-btn:hover {
-      transform: scale(1.05);
-    }
-
-    .duaa-ending {
-      background-color: #fff0dc;
-      margin: 40px 20px 0;
-      padding: 20px;
-      border-radius: 12px;
-      font-family: 'Amiri', serif;
-      font-size: 18px;
-    }
-
-    .share-section {
-      margin: 40px 0 20px;
-    }
-
-    .share-btn {
-      font-size: 16px;
-      padding: 10px 20px;
-      background-color: #2980b9;
-      border-radius: 8px;
-      border: none;
-      color: white;
-      cursor: pointer;
-    }
-
-    .share-btn:hover {
-      background-color: #216a94;
-    }
-
-    #share-status {
-      font-size: 13px;
-      color: #2d862d;
-      margin-top: 5px;
-    }
-
-    footer {
-      margin-top: 30px;
-      padding: 15px;
-      font-size: 14px;
-      color: #777;
-    }
-
-    @media (max-width: 600px) {
-      h1 { font-size: 24px; }
-      .duaa { font-size: 18px; }
-      .reset-btn, .share-btn { font-size: 14px; padding: 8px 16px; }
-      .counter-circle { width: 60px; height: 60px; line-height: 60px; font-size: 18px; }
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>استغفار لروح مصطفى بوشيخي</h1>
-    <div class="subheading">اجعلها صدقة جارية له، وادعُ له بالرحمة</div>
-  </header>
-
-  <div class="duaa">
-    <p>اللهم اغفر لعبدك مصطفى بوشيخي، وارحمه، وعافه، واعفُ عنه، وأكرم نزله، ووسع مدخله، واغسله بالماء والثلج والبرد، ونقه من الذنوب والخطايا كما ينقّى الثوب الأبيض من الدنس.</p>
-    <p>اللهم اجعل قبره روضة من رياض الجنة، ونوّر له فيه، وثبّته عند السؤال.</p>
-    <p>قال رسول الله صلى الله عليه وسلم: <br> <strong>"إذا مات ابن آدم انقطع عمله إلا من ثلاث: صدقة جارية، أو علم يُنتفع به، أو ولد صالح يدعو له."</strong></p>
-  </div>
-
-  <!-- قائمة الأذكار -->
-  <div id="azkar-container"></div>
-
-  <!-- دعاء ختامي -->
-  <div class="duaa-ending">
-    <p>اللهم اجعل كل من استغفر ودعا له سببًا لرفع درجاته في الجنة، واجمعنا به في مستقر رحمتك.</p>
-  </div>
-
-  <!-- زر إعادة العداد -->
-  <button class="reset-btn" onclick="resetAllCounters()">إعادة جميع العدادات</button>
-
-  <!-- زر المشاركة -->
-  <div class="share-section">
-    <button class="share-btn" onclick="copyLink()">مشاركة مع الأصدقاء</button>
-    <div id="share-status"></div>
-  </div>
-
-  <footer>
-    هذا الموقع صدقة جارية لروح المرحوم مصطفى بوشيخي، فساهم بالاستغفار له.
-
-Youcef Djebbar, [4/20/2025 7:43 PM]
-</footer>
-
-  <script>
-    const azkar = [
-      "اللهم ارفع درجاته ",
-      "اللهم اغفر له ",
-      "اللهم اجعل قبره روضة من رياض الجنة",
-      "اللهم افسح له في قبره مد بصره",
-      "اللهم اجمعنا به في الفردوس الأعلى",
-      "اللهم أنر له قبره بنورك",
-      "اللهم اجعله من الذين لا خوف عليهم ولا هم يحزنون",
-      "اللهم بشره بروح وريحان ورب راضٍ غير غضبان",
-    ];
-
-    function createZekrBox(text) {
-      const box = document.createElement("div");
-      box.className = "zekr-box";
-
-      let counter = 0;
-
-      const counterCircle = document.createElement("div");
-      counterCircle.className = "counter-circle";
-      counterCircle.textContent = counter;
-
-      const zekrText = document.createElement("p");
-      zekrText.textContent = text;
-
-      box.appendChild(counterCircle);
-      box.appendChild(zekrText);
-
-      box.addEventListener("click", () => {
-        counter++;
-        counterCircle.textContent = counter;
-      });
-
-      return box;
-    }
-
-    const container = document.getElementById("azkar-container");
-
-    azkar.forEach((zekr) => {
-      const box = createZekrBox(zekr);
-      container.appendChild(box);
+    box.addEventListener("click", () => {
+      countersData[index]++; // نزيد القيمة في المصفوفة
+      counterCircle.textContent = countersData[index]; // نحدث الشاشة من المصفوفة
     });
 
-    function resetAllCounters() {
-      const counters = document.querySelectorAll(".counter-circle");
-      counters.forEach(c => c.textContent = 0);
-    }
+    return box;
+  }
 
-    function copyLink() {
-      navigator.clipboard.writeText(window.location.href).then(() => {
-        document.getElementById("share-status").textContent = "تم نسخ الرابط!";
-      });
-    }
-  </script>
+  const container = document.getElementById("azkar-container");
 
-</body>
-</html>
+  azkar.forEach((zekr, index) => {
+    const box = createZekrBox(zekr, index);
+    container.appendChild(box);
+  });
+
+  function resetAllCounters() {
+    // 1. تصفير القيم في المصفوفة (الذاكرة)
+    for (let i = 0; i < countersData.length; i++) {
+      countersData[i] = 0;
+    }
+    
+    // 2. تصفير النصوص الظاهرة في الواجهة (الشاشة)
+    const counters = document.querySelectorAll(".counter-circle");
+    counters.forEach(c => c.textContent = 0);
+  }
+
+  function copyLink() {
+    navigator.clipboard.writeText(window.location.href).then(() => {
+      document.getElementById("share-status").textContent = "تم نسخ الرابط!";
+      setTimeout(() => {
+        document.getElementById("share-status").textContent = "";
+      }, 3000); // يختفي النص بعد 3 ثواني
+    });
+  }
+</script>
