Fix HTML encoding issues and clean up structure

--- a/index.html
+++ b/index.html
@@ -288,3 +288,11 @@
 
 </body>
 </html>
+<footer>
+  <div style="margin-top: 20px; font-size: 12px; opacity: 0.8;">
+  <a href="https://instagram.com/alt.yxf" target="_blank" style="text-decoration: none; color: #555;">
+    IG: alt.yxf
+  </a>
+</div>
+
+</footer>
